updates to cardboard and 6mm

--- a/HurricaneCharley100w/Materials/Acrylic6mm/ACRYLIC6MM_ENGR_400MMS_30PCT_0_05MM___CUT_15MMS_100PCT.INI
+++ b/HurricaneCharley100w/Materials/Acrylic6mm/ACRYLIC6MM_ENGR_400MMS_30PCT_0_05MM___CUT_15MMS_100PCT.INI
@@ -47,11 +47,13 @@ ZHeightForLaserFocus=0.00000
 LogicOrgPosition1=837.81918
 LogicOrgPosition2=56.12095
 LogicOrgPosition3=-9999999.00000
-SPLITBLOCK_NUMBER=0
+SPLITBLOCK_NUMBER=2
+SPLITBLOCK_NUMBER_0=0.00000
+SPLITBLOCK_NUMBER_1=100000.00000
 [TechnicsLayers_16711680]
 TechnicsMode=TECHNICS_LASERCUT
 LaserCutConnerPower=15.00000
-LaserCutWorkPower=15.00000
+LaserCutWorkPower=100.00000
 LaserCutConnerPower2=30.00000
 LaserCutWorkPower2=50.00000
 LaserCutFrequency=20000
@@ -78,7 +80,7 @@ LaserCutBackLashAddSpaceLength=8.00000
 LaserCutBlowGasType=2
 LaserCutAheadBlowGasTimes=0.00000
 LaserCutNoCloseGasTimes=0.00000
-LaserCutSpeed=100.00000
+LaserCutSpeed=3.30000
 LaserCutGWAcc=50.00000
 LaserCutGWTime=0.01000
 LaserCutTrackSize=100
@@ -136,7 +138,7 @@ LaserCutCircleSpeedNum=1
 LaserCutCircleSpeed0_MinR=0.00000
 LaserCutCircleSpeed0_MaxR=5.00000
 LaserCutCircleSpeed0_Speed=30.00000
-LaserEngravePower=30.00000
+LaserEngravePower=100.00000
 LaserEngravePower2=60.00000
 LaserEngraveFrequency=20000
 LaserEngraveSpeed=400.00000
