--- a/HurricaneCharley100w/Materials/Cardboard/Cardboard_ENGR_400MMS_30PCT_0_10MM___CUT_160MMS_50PCT.INI
+++ b/HurricaneCharley100w/Materials/Cardboard/Cardboard_ENGR_400MMS_30PCT_0_10MM___CUT_160MMS_50PCT.INI
@@ -47,11 +47,13 @@ ZHeightForLaserFocus=0.00000
 LogicOrgPosition1=837.81918
 LogicOrgPosition2=56.12095
 LogicOrgPosition3=-9999999.00000
-SPLITBLOCK_NUMBER=0
+SPLITBLOCK_NUMBER=2
+SPLITBLOCK_NUMBER_0=0.00000
+SPLITBLOCK_NUMBER_1=100000.00000
 [TechnicsLayers_16711680]
 TechnicsMode=TECHNICS_LASERCUT
-LaserCutConnerPower=50.00000
-LaserCutWorkPower=50.00000
+LaserCutConnerPower=100.00000
+LaserCutWorkPower=100.00000
 LaserCutConnerPower2=30.00000
 LaserCutWorkPower2=50.00000
 LaserCutFrequency=20000
@@ -78,7 +80,7 @@ LaserCutBackLashAddSpaceLength=8.00000
 LaserCutBlowGasType=2
 LaserCutAheadBlowGasTimes=0.00000
 LaserCutNoCloseGasTimes=0.00000
-LaserCutSpeed=160.00000
+LaserCutSpeed=25.00000
 LaserCutGWAcc=50.00000
 LaserCutGWTime=0.01000
 LaserCutTrackSize=100
